--- a/app/src/main/res/layout/holder_item.xml
+++ b/app/src/main/res/layout/holder_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.cleanarchitecturestudy.presenter.HomeFragmentViewModel" />
+            type="com.example.cleanarchitecturestudy.BaseViewModel" />
 
         <variable
             name="repoInfo"
