--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,10 +17,15 @@
         android:id="@+id/detailFragment"
         android:name="com.example.cleanarchitecturestudy.presenter.DetailFragment"
         android:label="상세">
+        <action
+            android:id="@+id/action_detailFragment"
+            app:destination="@id/detailFragment" />
         <argument
             android:name="repoInfo"
             app:argType="com.example.cleanarchitecturestudy.domain.model.RepoInfo" />
     </fragment>
+
+
 
 
     <fragment
