테스트 커밋 홈으로 가기 버튼 완료

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,6 +20,10 @@
         <action
             android:id="@+id/action_detailFragment"
             app:destination="@id/detailFragment" />
+        <action
+            android:id="@+id/action_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/detailFragment" />
         <argument
             android:name="repoInfo"
             app:argType="com.example.cleanarchitecturestudy.domain.model.RepoInfo" />
